crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_invalid_expression.py_3.12.snap
---
source: crates/ruff_linter/src/linter.rs
---
invalid-syntax: yield expression cannot be used within a TypeVar bound
 --> resources/test/fixtures/semantic_errors/invalid_expression.py:1:12
  |
1 | type X[T: (yield 1)] = int
  |            ^^^^^^^
  |

invalid-syntax: yield expression cannot be used within a type alias
 --> resources/test/fixtures/semantic_errors/invalid_expression.py:3:11
  |
3 | type Y = (yield 1)
  |           ^^^^^^^
  |

invalid-syntax: named expression cannot be used within a generic definition
 --> resources/test/fixtures/semantic_errors/invalid_expression.py:5:22
  |
5 | def f[T](x: int) -> (y := 3): return x
  |                      ^^^^^^
  |

invalid-syntax: yield expression cannot be used within a generic definition
 --> resources/test/fixtures/semantic_errors/invalid_expression.py:7:13
  |
7 | class C[T]((yield from [object])):
  |             ^^^^^^^^^^^^^^^^^^^
  |
