crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_irrefutable_case_pattern.py_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
invalid-syntax: wildcard makes remaining patterns unreachable
 --> resources/test/fixtures/semantic_errors/irrefutable_case_pattern.py:2:10
  |
2 |     case _:
  |          ^
  |

invalid-syntax: name capture `irrefutable` makes remaining patterns unreachable
 --> resources/test/fixtures/semantic_errors/irrefutable_case_pattern.py:8:10
  |
8 |     case irrefutable:
  |          ^^^^^^^^^^^
  |
