crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_multiple_case_assignment.py_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
invalid-syntax: multiple assignments to name `a` in pattern
 --> resources/test/fixtures/semantic_errors/multiple_case_assignment.py:2:14
  |
2 |     case [a, a]:
  |              ^
  |
