crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_rebound_comprehension.py_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
invalid-syntax: assignment expression cannot rebind comprehension variable
 --> resources/test/fixtures/semantic_errors/rebound_comprehension.py:1:2
  |
1 | [x:= 2 for x in range(2)]
  |  ^
2 | [x for x in [1] if (y := x) for y in [1]]
3 | [[x for x in [0] if (x := 1)] for x in [0]]
  |

invalid-syntax: comprehension inner loop cannot rebind assignment expression target `y`
 --> resources/test/fixtures/semantic_errors/rebound_comprehension.py:2:21
  |
1 | [x:= 2 for x in range(2)]
2 | [x for x in [1] if (y := x) for y in [1]]
  |                     ^
3 | [[x for x in [0] if (x := 1)] for x in [0]]
4 | [x for x in (lambda: (y := [1]))()]
  |

invalid-syntax: assignment expression cannot rebind comprehension variable
 --> resources/test/fixtures/semantic_errors/rebound_comprehension.py:3:22
  |
1 | [x:= 2 for x in range(2)]
2 | [x for x in [1] if (y := x) for y in [1]]
3 | [[x for x in [0] if (x := 1)] for x in [0]]
  |                      ^
4 | [x for x in (lambda: (y := [1]))()]
5 | [x for x in [0] if [(y := z) for z in [1]] for y in [2]]
  |

invalid-syntax: assignment expression cannot be used in a comprehension iterable expression
 --> resources/test/fixtures/semantic_errors/rebound_comprehension.py:4:23
  |
2 | [x for x in [1] if (y := x) for y in [1]]
3 | [[x for x in [0] if (x := 1)] for x in [0]]
4 | [x for x in (lambda: (y := [1]))()]
  |                       ^^^^^^^^
5 | [x for x in [0] if [(y := z) for z in [1]] for y in [2]]
  |
