crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_return_in_async_generator.py_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
invalid-syntax: `return` with value in async generator
 --> resources/test/fixtures/semantic_errors/return_in_async_generator.py:3:5
  |
1 | async def gen():
2 |     yield 1
3 |     return 42
  |     ^^^^^^^^^
  |
