crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_write_to_debug.py_3.12.snap
---
source: crates/ruff_linter/src/linter.rs
---
invalid-syntax: cannot assign to `__debug__`
 --> resources/test/fixtures/semantic_errors/write_to_debug.py:1:1
  |
1 | __debug__ = False
  | ^^^^^^^^^
  |

invalid-syntax: cannot assign to `__debug__`
 --> resources/test/fixtures/semantic_errors/write_to_debug.py:3:13
  |
3 | def process(__debug__):
  |             ^^^^^^^^^
  |

invalid-syntax: cannot assign to `__debug__`
 --> resources/test/fixtures/semantic_errors/write_to_debug.py:6:15
  |
6 | class Generic[__debug__]:
  |               ^^^^^^^^^
  |
